<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="equals_button_text">=</string>
    <string name="clear_button_text">Clear</string>
    <string name="answer_button_text">Ans</string>
    <string name="four_button_text">4</string>
    <string name="three_button_text">3</string>
    <string name="two_button_text">2</string>
    <string name="one_button_text">1</string>
    <string name="divide_button_text">/</string>
    <string name="multiply_button_text">*</string>
    <string name="subtract_button_text">-</string>
    <string name="add_button_text">+</string>
</resources>